converter implemented
now focus on logic